--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="48dp"
-        android:text="Base"
+        android:text="@string/base"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        android:text="Tip"
+        android:text="@string/tip"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="@+id/tv_tip_percent_lbl"
         app:layout_constraintTop_toBottomOf="@+id/tv_tip_percent_lbl" />
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Total"
+        android:text="@string/total"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="@+id/tv_tip_lbl"
         app:layout_constraintTop_toBottomOf="@+id/tv_tip_lbl" />
@@ -55,9 +55,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:autofillHints=""
         android:ems="8"
-        android:hint="Bill amount"
+        android:hint="@string/bill_amount"
         android:inputType="numberDecimal"
+        android:textColorHint="#A1887F"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_base_lbl"
         app:layout_constraintStart_toEndOf="@+id/tv_base_lbl"
@@ -100,7 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:fontFamily="sans-serif-condensed-light"
-        android:text="Made with ❤️ by rLapz"
+        android:text="@string/made_with"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
